--- a/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
+++ b/src/IAmBacon/IAmBacon/IAmBacon.Web.csproj
@@ -263,7 +263,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ErrorViewModel.cs" />
     <Compile Include="ViewModels\Home\HomeViewModel.cs" />
-    <Compile Include="ViewModels\Home\PostThumbViewModel.cs" />
+    <Compile Include="ViewModels\Shared\PostThumbViewModel.cs" />
     <Compile Include="ViewModels\ITwitterMetadata.cs" />
     <Compile Include="ViewModels\Post\CategoryCountViewModel.cs" />
     <Compile Include="ViewModels\Post\TagViewModel.cs" />
@@ -337,8 +337,9 @@
     <Content Include="googleb300e47449e1527f.html" />
     <Content Include="Content\sass\components\_pagination.scss" />
     <Content Include="Content\sass\components\_article.scss" />
-    <Content Include="Content\sass\components\_category-tag.scss" />
+    <Content Include="Content\sass\components\_tag.scss" />
     <Content Include="gruntfile.js" />
+    <Content Include="Content\sass\components\_page-section.scss" />
     <Content Include="humans.txt" />
     <None Include="Areas\Admin\Views\Template\LandingPage.cshtml" />
     <None Include="Areas\Admin\Views\Template\Post.cshtml" />
@@ -362,7 +363,6 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Views\Shared\EditorTemplates\CheckboxItem.cshtml" />
-    <Content Include="Views\Shared\DisplayTemplates\Tag.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\PostViewModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\CommentModel.cshtml" />
     <Content Include="robots.txt" />
@@ -383,6 +383,7 @@
     <Content Include="Views\Shared\_TwitterMetaTags.cshtml" />
     <Content Include="Views\Post\DisplayTemplates\PaginationItemViewModel.cshtml" />
     <Content Include="Views\Post\_Pagination.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\PostThumbTag.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -471,9 +472,7 @@
     <Content Include="Content\sass\pages\post\post-ie.scss" />
     <Content Include="Content\sass\base\_code.scss" />
     <Content Include="Content\sass\pages\post\category.scss" />
-    <Content Include="Content\sass\pages\post\category-ie.scss" />
     <Content Include="Content\sass\pages\post\tag.scss" />
-    <Content Include="Content\sass\pages\post\tag-ie.scss" />
     <Content Include="package.json" />
     <None Include="Properties\PublishProfiles\PublishToLiveFolder.pubxml" />
   </ItemGroup>
@@ -510,7 +509,7 @@
     <Error Condition="!Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=317567." HelpKeyword="BCLBUILD2001" />
     <Error Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" Text="The build restored NuGet packages. Build the project again to include these packages in the build. For more information, see http://go.microsoft.com/fwlink/?LinkID=317568." HelpKeyword="BCLBUILD2002" />
   </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
