--- a/src/IAmBacon/IAmBacon.Web.Tests/app.config
+++ b/src/IAmBacon/IAmBacon.Web.Tests/app.config
@@ -60,7 +60,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.5.10.0" newVersion="4.5.10.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.7.63.0" newVersion="4.7.63.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.50.0.0" newVersion="3.50.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
