--- a/src/IAmBacon/IAmBacon.Admin/IAmBacon.Admin.csproj
+++ b/src/IAmBacon/IAmBacon.Admin/IAmBacon.Admin.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
@@ -17,6 +18,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IAmBacon.Core.Application\IAmBacon.Core.Application.csproj" />
+    <ProjectReference Include="..\IAmBacon.Core.Domain\IAmBacon.Core.Domain.csproj" />
+    <ProjectReference Include="..\IAmBacon.Core.Infrastructure\IAmBacon.Core.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
