--- a/test/IAmBacon.Core.Admin.Tests/IAmBacon.Core.Admin.Tests.csproj
+++ b/test/IAmBacon.Core.Admin.Tests/IAmBacon.Core.Admin.Tests.csproj
@@ -7,9 +7,24 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
-    <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <PackageReference Include="AutoFixture" Version="3.51.0" />
+    <PackageReference Include="AutoFixture.AutoMoq" Version="3.50.3" />
+    <PackageReference Include="Machine.Specifications" Version="0.12.0" />
+    <PackageReference Include="Machine.Specifications.Mvc5" Version="1.9.3" />
+    <PackageReference Include="Machine.Specifications.Runner.VisualStudio" Version="2.5.2" />
+    <PackageReference Include="Machine.Specifications.Should" Version="0.11.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Moq" Version="4.7.145" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\IAmBacon\IAmBacon.Admin\IAmBacon.Admin.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Ploeh.AutoFixture.AutoMoq">
+      <HintPath>..\..\src\IAmBacon\packages\AutoFixture.AutoMoq.3.50.3\lib\net40\Ploeh.AutoFixture.AutoMoq.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
