--- a/src/IAmBacon/IAmBacon.Core.Application/IAmBacon.Core.Application.csproj
+++ b/src/IAmBacon/IAmBacon.Core.Application/IAmBacon.Core.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
+    <PackageReference Include="Dapper" Version="1.50.4" />
   </ItemGroup>
 
   <ItemGroup>
