--- a/src/IAmBacon/IAmBacon.Core.Domain/IAmBacon.Core.Domain.csproj
+++ b/src/IAmBacon/IAmBacon.Core.Domain/IAmBacon.Core.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Markdig" Version="0.16.0" />
+    <PackageReference Include="Markdig" Version="0.17.1" />
   </ItemGroup>
 
 </Project>
