--- a/test/IAmBacon.Core.Admin.Tests/IAmBacon.Core.Admin.Tests.csproj
+++ b/test/IAmBacon.Core.Admin.Tests/IAmBacon.Core.Admin.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Machine.Specifications" Version="1.0.0" />
     <PackageReference Include="Machine.Specifications.Runner.VisualStudio" Version="2.9.0" />
     <PackageReference Include="Machine.Specifications.Should" Version="1.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
   </ItemGroup>
 
