--- a/test/IAmBacon.Core.Application.Tests/IAmBacon.Core.Application.Tests.csproj
+++ b/test/IAmBacon.Core.Application.Tests/IAmBacon.Core.Application.Tests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\IAmBacon\IAmBacon.Core.Application\IAmBacon.Core.Application.csproj" />
+    <ProjectReference Include="..\..\src\IAmBacon\IAmBacon.Core.Infrastructure\IAmBacon.Core.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
