--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
   "author": "Colin Bacon",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.8.2",
     "commitizen": "^4.1.2",
+    "cssnano": "^4.1.10",
     "cz-conventional-changelog": "^3.2.0",
-    "husky": "^4.2.5"
+    "grunt": "^1.1.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-postcss": "^0.9.0",
+    "grunt-sass": "^3.1.0",
+    "husky": "^4.2.5",
+    "node-sass": "^4.14.1"
   },
   "config": {
     "commitizen": {
@@ -25,5 +33,8 @@
     "hooks": {
       "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
