--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "autoprefixer": "^9.8.2",
     "commitizen": "^4.1.2",
     "cssnano": "^4.1.10",
     "cz-conventional-changelog": "^3.2.0",
     "grunt": "^1.1.0",
     "grunt-cli": "^1.3.2",
+    "grunt-concurrent": "^3.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-postcss": "^0.9.0",
     "grunt-sass": "^3.1.0",
