--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-watch": "^1.1.0",
     "grunt-postcss": "^0.9.0",
     "grunt-sass": "^3.1.0",
+    "grunt-shell": "^3.0.1",
     "husky": "^4.2.5",
     "node-sass": "^4.14.1"
   },
@@ -41,7 +42,6 @@
     "defaults"
   ],
   "dependencies": {
-    "grunt-shell": "^3.0.1",
-    "save-dev": "0.0.1-security"
+    "backstopjs": "^5.0.1"
   }
 }
