--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cssnano": "^4.1.10",
     "cz-conventional-changelog": "^3.2.0",
     "grunt": "^1.1.0",
+    "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.3.2",
     "grunt-concurrent": "^3.0.0",
     "grunt-contrib-watch": "^1.1.0",
