--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@11ty/eleventy": "^0.11.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "autoprefixer": "^9.8.2",
+    "backstopjs": "6.0.1",
     "commitizen": "^4.2.2",
     "cssnano": "^4.1.10",
     "cz-conventional-changelog": "^3.2.0",
@@ -42,7 +43,5 @@
   "browserslist": [
     "defaults"
   ],
-  "dependencies": {
-    "backstopjs": "^5.0.1"
-  }
+  "dependencies": {}
 }
