--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "Colin Bacon",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.0",
+    "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "autoprefixer": "^9.8.2",
-    "backstopjs": "6.0.1",
+    "backstopjs": "^6.0.1",
     "commitizen": "^4.2.2",
     "cssnano": "^4.1.10",
     "cz-conventional-changelog": "^3.2.0",
