--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
-    "autoprefixer": "^9.8.2",
+    "autoprefixer": "^10.4.0",
     "backstopjs": "^6.0.1",
     "commitizen": "^4.2.2",
     "cssnano": "^4.1.10",
@@ -28,7 +28,8 @@
     "grunt-sass": "^3.1.0",
     "grunt-shell": "^3.0.1",
     "husky": "^4.2.5",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "postcss": "^8.3.11"
   },
   "config": {
     "commitizen": {
