--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
+    "@lodder/grunt-postcss": "^3.1.1",
     "autoprefixer": "^10.4.0",
     "backstopjs": "^6.0.1",
     "commitizen": "^4.2.2",
@@ -24,7 +25,6 @@
     "grunt-cli": "^1.3.2",
     "grunt-concurrent": "^3.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-postcss": "^0.9.0",
     "grunt-sass": "^3.1.0",
     "grunt-shell": "^3.0.1",
     "husky": "^7.0.4",
