--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "grunt-shell": "^3.0.1",
     "husky": "^7.0.4",
     "node-sass": "^6.0.1",
-    "postcss": "^8.3.11"
+    "postcss": "^8.3.11",
+    "prettier": "2.4.1"
   },
   "config": {
     "commitizen": {
